data/derived/comb/progs/unify/prog8432.ml.out
Characters 76-78:
  let f a x = a^sl^x in
                ^^
Error: This expression has type 'a list
       but an expression was expected of type string
